Reorganized directory tree

--- a/html/home.html
+++ b/html/home.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 
 <body>
@@ -22,14 +22,14 @@
             <li><a href="about.html"style="color: black; text-decoration: none;">About</a></li>
             <li><a href="contact.html"style="color: black; text-decoration: none;">Contact</a></li>
             <li id="cart-icon">🛒 <span id="cart-count">0</span></li>
-            <li>👤</li>
+            <li><a href="profile.php"style="color: black; text-decoration: none;">👤</a></li>
 
         </ul>
     </div>
 
 
     <div class="container2">
-        <img src="website.png" alt="shop image">
+        <img src="../images/website.png" alt="shop image">
         <h2>Up to <span style="color: red;">70% Off</span>- All t-shirts & Accessories</h2>
         <button><a href="shop.html" style="color: black; text-decoration: none;">Shop Now</a></button>
     </div>
@@ -62,7 +62,7 @@
 
     <section class="product-grid">
         <div class="product-card">
-            <img src="shirt1.jpg" alt="Shirt 1" />
+            <img src="../images/shirt1.jpg" alt="Shirt 1" />
             <p class="brand">adidas</p>
             <h4>Cartoon Astronaut T-Shirts</h4>
             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -70,7 +70,7 @@
             <button class="cart-btn" onclick="addToCart()">🛒</button>
         </div>
         <div class="product-card">
-            <img src="shirt2.jpg" alt="Shirt 2" />
+            <img src="../images/shirt2.jpg" alt="Shirt 2" />
             <p class="brand">adidas</p>
             <h4>Cartoon Astronaut T-Shirts</h4>
             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -78,7 +78,7 @@
             <button class="cart-btn" onclick="addToCart()">🛒</button>
         </div>
         <div class="product-card">
-            <img src="shirt3.jpg" alt="Shirt 2" />
+            <img src="../images/shirt3.jpg" alt="Shirt 2" />
             <p class="brand">adidas</p>
             <h4>Cartoon Astronaut T-Shirts</h4>
             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -86,7 +86,7 @@
             <button class="cart-btn" onclick="addToCart()">🛒</button>
         </div>
         <div class="product-card">
-            <img src="shirt4.jpg" alt="Shirt 2" />
+            <img src="../images/shirt4.jpg" alt="Shirt 2" />
             <p class="brand">adidas</p>
             <h4>Cartoon Astronaut T-Shirts</h4>
             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -95,7 +95,7 @@
         </div>
         <br>
         <div class="product-card">
-            <img src="shirt4.jpg" alt="Shirt 2" />
+            <img src="../images/shirt4.jpg" alt="Shirt 2" />
             <p class="brand">adidas</p>
             <h4>Cartoon Astronaut T-Shirts</h4>
             <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -113,7 +113,7 @@
             fashion at unbeatable prices. Shop with confidence and enjoy free shipping, great deals, and excellent
             support.</p>
     </section>
-    <script src="cart.js"></script>
+    <script src="../js/cart.js"></script>
 </body>
 
 </html>
