--- a/html/shop.html
+++ b/html/shop.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="shop.css">
-  <link rel="stylesheet" href="navbar.css">
-  <script src="shop.js"></script>
+  <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/shop.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <script src="../js/shop.js"></script>
 </head>
 
 <body>
@@ -21,9 +21,8 @@
       <li><a href="about.html"style="color: black; text-decoration: none;">About</a></li>
       <li><a href="contact.html"style="color: black; text-decoration: none;">Contact</a></li>
       <li id="cart-icon">🛒 <span id="cart-count">0</span></li>
-      <li>👤</li>
+      <li><a href="../php/profile.php"style="color: black; text-decoration: none;">👤</a></li>
     </ul>
-
   </div>
   <div class="container2">
     <h2>Products</h2>
@@ -40,7 +39,7 @@
     <div class="row justify-content-center">
       <div class="col-auto col-sm-6 col-md-4 col-lg-3 col-xl-2 ">
         <div class="product-card">
-          <img src="shirt1.jpg" alt="Shirt 1" />
+          <img src="../images/shirt1.jpg" alt="Shirt 1" />
           <p class="brand">adidas</p>
           <h4>Cartoon Astronaut T-Shirts</h4>
           <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -50,7 +49,7 @@
       </div>
       <div class="col-auto col-sm-6 col-md-4 col-lg-3 col-xl-2">
         <div class="product-card">
-          <img src="shirt2.jpg" alt="Shirt 2" />
+          <img src="../images/shirt2.jpg" alt="Shirt 2" />
           <p class="brand">adidas</p>
           <h4>Cartoon Astronaut T-Shirts</h4>
           <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -60,7 +59,7 @@
       </div>
       <div class="col-auto col-sm-6 col-md-4 col-lg-3 col-xl-2">
         <div class="product-card">
-          <img src="shirt3.jpg" alt="Shirt 2" />
+          <img src="../images/shirt3.jpg" alt="Shirt 2" />
           <p class="brand">adidas</p>
           <h4>Cartoon Astronaut T-Shirts</h4>
           <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -70,7 +69,7 @@
       </div>
       <div class="col-auto col-sm-6 col-md-4 col-lg-3 col-xl-2">
         <div class="product-card">
-          <img src="shirt4.jpg" alt="Shirt 2" />
+          <img src="../images/shirt4.jpg" alt="Shirt 2" />
           <p class="brand">adidas</p>
           <h4>Cartoon Astronaut T-Shirts</h4>
           <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -80,7 +79,7 @@
       </div>
       <div class="col-auto col-sm-6 col-md-4 col-lg-3 col-xl-2">
         <div class="product-card">
-          <img src="shirt4.jpg" alt="Shirt 2" />
+          <img src="../images/shirt4.jpg" alt="Shirt 2" />
           <p class="brand">adidas</p>
           <h4>Cartoon Astronaut T-Shirts</h4>
           <div class="rating">⭐⭐⭐⭐⭐</div>
@@ -97,7 +96,7 @@
 
 
 
-<script src="cart.js"></script>
+<script src="../js/cart.js"></script>
 </body>
 
 </html>
