--- a/html/about.html
+++ b/html/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="./bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container1">
@@ -22,7 +22,7 @@
     </div>
     <h1 style="margin-top: 120px; font-size: 50px; font-weight: bold; text-align: center;">About Us</h1>
     <div class="division" style="display: flex;">
-    <img src="about.jpg" alt="" style="width: 900px; margin-top: 20px;">
+    <img src="../images/about.jpg" alt="" style="width: 900px; margin-top: 20px;">
     <p style="margin-top: 300px; font-size: 30px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, error? Vel distinctio nesciunt odit perferendis? At hic consequuntur, asperiores tempore quisquam expedita repellendus, et odit placeat sed minima quod voluptates.</p>
   </div>  
 
