--- a/html/contact.html
+++ b/html/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-        <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="./bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container1">
@@ -16,7 +16,7 @@
             <li><a href="about.html"style="color: black; text-decoration: none;">About</a></li>
             <li><a href="contact.html"style="color: black; text-decoration: none;">Contact</a></li>
             <!-- <li id="cart-icon">🛒 <span id="cart-count">0</span></li> -->
-            <li>👤</li>
+            <li><a href="profile.php"style="color: black; text-decoration: none;">👤</a></li>
 
         </ul>
     </div>
