--- a/html/about.html
+++ b/html/about.html
@@ -16,7 +16,7 @@
             <li><a href="about.html"style="color: black; text-decoration: none;">About</a></li>
             <li><a href="contact.html"style="color: black; text-decoration: none;">Contact</a></li>
             <!-- <li id="cart-icon">🛒 <span id="cart-count">0</span></li> -->
-            <li><a href="profile.php"style="color: black; text-decoration: none;">👤</a></li>
+            <li><a href="../php/login.php"style="color: black; text-decoration: none;">👤</a></li>
 
         </ul>
     </div>
