--- a/html/shop.html
+++ b/html/shop.html
@@ -15,7 +15,7 @@
   <body>
 
     <div class="container1">
-      <h1>MySite</h1>
+        <h1 style="font-weight: bold; margin-top: 5px; font-family: Georgia, 'Times New Roman', Times, serif;">UniCart</h1>
       <ul style="flex-wrap: wrap;">
         <li><a href="home.html" style="color: black; text-decoration: none;">Home</a></li>
         <li><a href="shop.html" style="color: black; text-decoration: none;">Shop</a></li>
